
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct connection {int dummy; } ;



int mcs_store (struct connection *c, int op, const char *key, int key_len, int flags, int delay, int size) {
  return -2;
}
